[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirai"
version = "0.1.0"
authors = [
  { name="Santosh Sivaraj", email="santosh@fossix.org" },
]
description = "Multi-agent orchestrator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/santoshs/mira"
Issues = "https://github.com/santoshs/mirai/issues"
